[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/militare.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/hop.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/pain.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.0565, 33.6522 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5552, 13.0861 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.47659, 35.0615 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 25.8214 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 41.2859, 52.6436 )
script = ExtResource( 2 )
gravity = 200.0

[node name="Player" type="Sprite" parent="."]
position = Vector2( -1.19748, 0.59874 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.39153, -9.28789 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 5.97078, 35.8247 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 449.639, 63.0068 )
current = true
limit_top = 0
limit_bottom = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="EnemyColliderForward" type="Area2D" parent="."]
modulate = Color( 0.0235294, 0.239216, 0.0705882, 1 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyColliderForward"]
position = Vector2( 33.3673, 8.72682 )
shape = SubResource( 3 )

[node name="EnemyColliderBackward" type="Area2D" parent="."]
modulate = Color( 0.0235294, 0.239216, 0.0705882, 1 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyColliderBackward"]
modulate = Color( 0.0392157, 0.4, 0.254902, 1 )
position = Vector2( -29.2605, 22.5871 )
shape = SubResource( 4 )

[node name="AudioPlayerJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioPlayerOuch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="EnemyColliderForward" to="." method="_on_EnemyColliderForward_body_entered"]
[connection signal="body_entered" from="EnemyColliderBackward" to="." method="_on_EnemyColliderBackward_body_entered"]
